[gd_scene load_steps=4 format=3 uid="uid://dh0kc5ysas7xu"]

[ext_resource type="Script" uid="uid://dd4r1r2hvvp4d" path="res://ui/ui.gd" id="1_nb4k0"]
[ext_resource type="Script" uid="uid://c4ms86uokerem" path="res://ui/hud.gd" id="2_ks8t7"]
[ext_resource type="Theme" uid="uid://bunuwhfnqwadq" path="res://ui/default_theme.tres" id="3_wl5ax"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nb4k0")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_ks8t7")

[node name="ScoreLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ScoreText" type="Label" parent="HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="HealthBar" type="ProgressBar" parent="HUD"]
layout_mode = 0
offset_right = 4.0
offset_bottom = 27.0

[node name="MessageLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="MessageTimer" type="Timer" parent="HUD"]

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_wl5ax")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -73.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Start Game"

[node name="OptionsButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="ExitGameButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Exit Game"

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_wl5ax")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -98.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2

[node name="ResumeGameButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resume Game"

[node name="NewGameButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "New Game"

[node name="OptionsButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="ExitGameButton" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Exit Game"

[node name="OptionsMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_wl5ax")
